# profile_util

./: .gitignore  CMakeLists.txt  Makefile  README.md  build_all.sh  build_cpu.sh  build_cuda.sh  build_hip.sh  setup.py
cmake/: PUCMakeUtils.cmake
examples/: Makefile  openmpvec.c  openmpvec.cpp  openmpvec.f90
examples/gpu-mpi/: Makefile  gpu-mpi-comm.cpp
examples/gpu-mpi/src/: gpu-mpi-comm.cpp
examples/gpu-openmp/: Makefile
examples/gpu-openmp/src/: common.h  gpu-openmp.cpp  kernels.cu  kernels.h
examples/mpi/: Makefile  mpi-compute.cpp  mpi-io.cpp  mpicomm.cpp  mpivec.cpp
examples/mpi/src/: mpi-compute.cpp  mpi-io.cpp  mpicomm.cpp  mpivec.cpp
examples/openmp/: Makefile  openmpvec.cpp
examples/openmp/src/: openmpvec.cpp
include/: git_revision.h  profile_util.h  profile_util_api.h  profile_util_api_c.h  profile_util_gpu.h
src/: CMakeLists.txt  c_api.cpp  git_revision.cpp.in  mem_util.cpp  profile_util.cpp  profile_util.h  profile_util_cinterface.cpp  profile_util_pyinterface.cpp  thread_affinity_util.cpp  time_util.cpp
src/tests/: CMakeLists.txt  test_affinity.cpp  test_gpu.cpp  test_gpu_mpi_comm.cpp  test_mpi_comm.cpp  test_mpi_compute.cpp  test_mpi_io.cpp  test_profile_util.cpp  test_profile_util.py  test_profile_util_c_api.c
